[metadata]
name = custom_hooks
version = 1.3.0
description = Just some hooks that help save some time ...and nerves.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OriginalUtkin/custom-hooks
author = Kirill Utkin
author_email = utkinkir@gmail.com
license = MIT